# gpt2-from-scratch-explained2

./: README.md  generate.py  pyproject.toml  requirements.txt  train.py
data/: tiny_sample.txt
gpt2/: __init__.py  model.py  tokenizer.py
screenshots/: README.md
tests/: test_model.py
