[project]
name = "gpt2-from-scratch-explained"
version = "0.1.0"
description = "Compact GPT-2 style Transformer implementation in PyTorch."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
